--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,2 +1,7 @@
+<script type="text/javascript">
+    window.currentUser = (
+        <%= render('api/users/user.json.jbuilder', 
+        user: current_user).html_safe  %>)
+        </script>
 <main id="root">
 </main>
