--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -5,5 +5,12 @@
             user: current_user).html_safe  %>)
     </script>
 <% end %>
+
+<script type="text/javascript"> 
+    window.logo = (
+        "<%= asset_path("logos/logo.png") %>") 
+</script>
+    
+
 <main id="root">
 </main>
