--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -7,10 +7,107 @@ body {
      padding: 0;
      border: 0;
      height: 100%;
+     position: relative;
  }
+
+ button:focus {
+     outline: none;
+ }
+
+ input[type="text"],
+ input[type="password"]
+{
+    font-family: 'Cabin', sans-serif;
+    font-size: 14px;
+    letter-spacing: 1px;
+    color: whitesmoke;
+    height: 28px;
+    background-color: #585656;
+    border-style: none;
+    border-radius: 2px;
+    margin: 5px;
+}
+
+ input[type="text"]:focus,
+ input[type="password"]:focus
+{   
+    outline: none !important;
+    border:0.75px solid #f5c976;
+    box-shadow: 0 0 4px whitesmoke;
+    background-color: #646464;
+}
+
+input[type="text"]:active,
+ input[type="password"]:active
+{
+    transition: all 0;
+    background-color: #646464;
+    
+}
+
+::placeholder {
+    opacity: 1;
+    color: #b3b3b3;
+    text-shadow: 0px 0.5px #666464
+}
 
  .app {
      display: flex;
+ }
+
+ img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+ .logo-img {
+    position: absolute;
+    left: 23px;
+    top: 23px;
+    height: 40px;
+    width: 40px;
+    z-index: 3;
+ }
+
+ .logo-text {
+     font-family: 'Work Sans', sans-serif;
+     font-size: 28px;
+     padding-left: 20px;
+     text-shadow: 0.25px 0.25px #b3b3b3;
+ }
+
+ .l1 {
+    position: absolute;
+    font-size: 31px;
+    left: 65px;
+    top: 23px;
+    z-index: 1;
+ }
+
+ .l2 {
+    position: absolute;
+    font-size: 28px;
+    /* padding-bottom: 5px; */
+    top: 26px;
+    left: 77.75px;
+    letter-spacing: -1.75px;
+ }
+
+ .rest {
+    position: absolute;
+    font-size: 28px;
+    /* padding-bottom: 5px; */
+    top: 26px;
+    left: 84px;
+    letter-spacing: -1.75px;
+ }
+
+ .l3 {
+    display:none;
+    position: absolute;
+    font-size: 27px;
+    left: 180px;
+    top: 38px;
  }
 
 .session-form {
@@ -18,26 +115,98 @@ body {
      flex-direction: column;
      justify-content: center;
      align-items: center;
-     height: 300px;
-     background: #222326;
+     height: 500px;
+     background: rgba(0, 0, 0, 0);
+     /* opacity: 0; */
      margin: 0 auto;
+     /* width: 340px; */
  }
 
  .session-submit {
     border: 0;
     color: white;
-    background-color: rgb(45, 165, 45);
+    background-color: #f59b23;
     border-radius: 15px;
-    width: 180px;
-    height: 25px;
+    width: 30%;
+    height: 33px;
     text-align: center;
     text-decoration: none;
     margin: 10px;
-    font-size: 13px;   
+    margin-top: 20px;
+    font-size: 11px;   
+    letter-spacing: 2px;
+    text-shadow: 0.5px 0.5px rgb(46, 46, 46);
+}
+
+.session-submit:hover {
+    transition: all 0.05s ease-in-out;
+    transform: scale(1.05);
+    background-color: #f7b234;
+}
+
+.guest-button {
+    border: 0;
+    color: white;
+    background-color: #3b5997;
+    border-radius: 15px;
+    width: 97.5%;
+    height: 33px;
+    text-align: center;
+    text-decoration: none;
+    margin: 10px;
+    font-size: 11px;   
+    letter-spacing: 2px;
+    text-shadow: 0.5px 0.5px rgb(173, 173, 173);
+}
+
+.guest-button:hover {
+    transition: all 0.05s ease-in-out;
+    transform: scale(1.05);
+    background-color: #5c88db;
 }
 
 .form-input {
     padding-left: 8px;
+    width: 340px;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    width: 150px;
+    border: 0;
+    border-top: 1px solid #585656;
+    margin: 1em 0;
+    padding: 0;
+}
+
+.or-block {
+    display: flex;
+}
+
+.or {
+    color: #b3b3b3;
+    letter-spacing: 4px;
+    font-size: 11px;
+    margin: 10px;
+    margin-left: 13px;
+}
+
+.session-flip {
+    color: whitesmoke;
+    text-decoration: none;
+    font-size: 11px;
+    letter-spacing: 2px;
+    bottom: -150%;
+    border-top: 1px solid rgba(0, 0, 0, 0);
+}
+
+.session-flip:hover {
+    /* text-decoration: underline;
+    text-decoration-line: 5px; */
+    transition: all 0;
+    border-top: none;
+    border-bottom: 1px solid whitesmoke;
 }
 
  a {
