--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -11,6 +11,12 @@
         "<%= asset_path("logos/logo.png") %>") 
 </script>
     
+<script type="text/javascript"> 
+    window.redbg = (
+        "<%= asset_path("backgrounds/backgroundreddish.svg") %>") 
+</script>
+
+
 
 <main id="root">
 </main>
