--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -1,12 +1,44 @@
 
 header {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     flex-direction: column;
     height: 100vh;
     width: 230px;
     background-color: black;
     /* padding-left: 10px; */
+}
+
+.site-nav {
+    display: flex;
+    flex-direction: column;
+    height: 100px;
+    margin: 0 auto;
+    padding-bottom: 60px;
+    width: 100%; 
+    margin-top: 15px;
+}
+
+.site-nav-link {
+    width: 100%;
+    height: 30px;
+    margin: auto;
+    padding-top: 8px;
+    /* text-align: center; */
+    padding-left: 20px; 
+    text-decoration: none;
+    border-left: 4px solid black;
+    color: #b3b3b3;
+}
+
+.site-nav-link:hover {
+    transition: all 0.15s ease-in;
+    color: white;
+}
+
+.site-nav-link:focus {
+    border-left: 4px solid #f59b23;
+    color: white;
 }
 
 .user-nav {
@@ -15,6 +47,7 @@ header {
     justify-content: space-between;
     height: 100px;
     margin: 0 auto;
+    padding-top: 450px;
     padding-bottom: 60px;
 }
 
