--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -1,9 +1,10 @@
 
-header {
+.nav-left {
     display: flex;
     /* justify-content: space-between; */
     flex-direction: column;
-    height: 100vh;
+    min-height: 100%;
+    height: 100%;
     width: 230px;
     background-color: black;
     /* padding-left: 10px; */
