fixed sidebar height

--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -3,7 +3,7 @@
     display: flex;
     /* justify-content: space-between; */
     flex-direction: column;
-    min-height: 100%;
+    min-height: 100vh;
     height: 100%;
     width: 230px;
     background-color: black;
