--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -6,7 +6,7 @@ body {
      margin: 0;
      padding: 0;
      border: 0;
-     height: 100%;
+     height: 100vh;
      position: relative;
      z-index: 2;
  }
@@ -46,6 +46,7 @@ body {
     border-style: none;
     border-radius: 2px;
     margin: 5px;
+    border:0.75px solid black;
 }
 
  input[type="text"]:focus,
