--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -3,11 +3,12 @@
     display: flex;
     /* justify-content: space-between; */
     flex-direction: column;
-    min-height: 100vh;
-    height: 100%;
+    min-height: 100%;
+    height: 100vh;
     width: 230px;
-    background-color: black;
+    background-color: rgb(18, 18, 18);
     /* padding-left: 10px; */
+    /* margin-bottom: 90px; */
 }
 
 .site-nav {
@@ -43,13 +44,16 @@
 }
 
 .user-nav {
+    position: fixed;
+    bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100px;
+    padding: 22px;
     margin: 0 auto;
-    padding-top: 450px;
-    padding-bottom: 60px;
+    /* margin-bottom: 0; */
+    padding-bottom: 100px;
 }
 
 .greeting-temp {
@@ -82,7 +86,7 @@
 
 
 .login {
-    background-color: #151211;
+    background-color: rgb(18, 18, 18);
     border: 2px solid #b3b3b3;
     color: #f9f9f9;
     text-shadow: 0px 0.5px #666464
