--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -1,5 +1,6 @@
 
 .nav-left {
+    position: absolute;
     display: flex;
     /* justify-content: space-between; */
     flex-direction: column;
@@ -16,25 +17,37 @@
     flex-direction: column;
     height: 100px;
     margin: 0 auto;
+    padding-top: 10px;
     padding-bottom: 60px;
     width: 100%; 
     margin-top: 15px;
+}
+
+.nav-icons {
+    vertical-align: middle;
+}
+
+.nav-text {
+    position: relative;
+    top: 2px !important;
+    left: 10px;
 }
 
 .site-nav-link {
     width: 100%;
     height: 30px;
     margin: auto;
-    padding-top: 8px;
+    padding-top: 0px;
     /* text-align: center; */
     padding-left: 20px; 
     text-decoration: none;
-    border-left: 4px solid black;
+    border-left: 4px solid rgb(18, 18, 18);
     color: #b3b3b3;
+    /* vertical-align: middle; */
 }
 
 .site-nav-link:hover {
-    transition: all 0.15s ease-in;
+    transition: all 0.25s ease-in;
     color: white;
 }
 
