--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -2,27 +2,31 @@
     background: none;
     color: whitesmoke;
     /* background-color: rgba(67, 67, 67, 0.365); */
-    margin-left: 230px;
+    margin-left: 250px;
     z-index: -1;
-    min-height: 100%;
-    min-width: 100%;
     height: auto;
     position: absolute;
-    top: 0;
-    left: 0;  
-    min-height: 100%;
-    width: 100px;
+    top: 0px;
+    /* left: 0;   */
+    width: 100%;
     height: 100px;
 }
 
 .search-bar {
+    position: absolute;
+    top: 20px;
     width: 40% !important;
-    min-width: 300px !important;
+    min-width: 120px !important;
     height: 45px !important;
     background: whitesmoke !important;
     color: rgb(18, 18, 18) !important;
     border-radius: 25px !important;
-    text-align: center;
+    padding-left: 40px;
+    font-size: 16px !important;
+    /* text-align: center; */
+    /* color: transparent !important;
+    text-shadow: 0 0 0 rgb(18, 18, 18) !important; */
+    font-size: 18px;
 }
 
 .search-bar::placeholder {
@@ -30,3 +34,8 @@
     text-align: center;
 }
 
+.search-bar:focus {
+    outline: none !important;
+    border: none !important;
+    box-shadow: none !important;    
+}
