--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -158,6 +158,7 @@
     margin-left: 0;
 }
 
+
 .playlist-item {
     padding: 4px;
     padding-left: 0;
@@ -171,6 +172,13 @@
     width: 100%;
     padding-left: 10px;
 
+}
+
+.nav-sub-header {
+    font-size: 11px !important;
+    letter-spacing: 2.5px;
+    color: whitesmoke;
+    padding-left: 10px !important;
 }
 
 .playlist-link:hover {
