--- a/app/assets/stylesheets/artist_show.css
+++ b/app/assets/stylesheets/artist_show.css
@@ -59,9 +59,15 @@
 }
 
 .list-item {
+    display: flex;
+    justify-content: space-between;
     border-bottom: 0.5px solid rgb(31, 31, 31);
     padding: 8px;
     padding-left: 20px;
+}
+
+.plus-icon {
+    font-size: 6px;
 }
 
 .list-item:hover {
