--- a/app/assets/stylesheets/artist_show.css
+++ b/app/assets/stylesheets/artist_show.css
@@ -62,9 +62,9 @@
 .list-item {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-bottom: 0.5px solid rgb(31, 31, 31);
-    padding: 8px;
-    padding-top: 10px;
+    padding: 4px;   
     padding-left: 20px;
 }
 
@@ -108,6 +108,7 @@
     background: none;
     color: #666464;
     border: none;
+    padding: none !important;
 }
 
 .add-button:hover {
@@ -137,6 +138,7 @@
 
 .add-pl-item {
     padding: 5px;
+    cursor: default;
 }
 
 .add-pl-item:hover {
