--- a/app/assets/stylesheets/audio_player.css
+++ b/app/assets/stylesheets/audio_player.css
@@ -1,19 +1,3 @@
-/* audio::-webkit-media-controls-panel
-audio::-webkit-media-controls-mute-button
-audio::-webkit-media-controls-play-button
-audio::-webkit-media-controls-timeline-container
-audio::-webkit-media-controls-current-time-display
-audio::-webkit-media-controls-time-remaining-display
-audio::-webkit-media-controls-timeline
-audio::-webkit-media-controls-volume-slider-container
-audio::-webkit-media-controls-volume-slider
-audio::-webkit-media-controls-seek-back-button
-audio::-webkit-media-controls-seek-forward-button
-audio::-webkit-media-controls-fullscreen-button
-audio::-webkit-media-controls-rewind-button
-audio::-webkit-media-controls-return-to-realtime-button
-audio::-webkit-media-controls-toggle-closed-captions-button */
-
 .audio-player {
     position: absolute;
     display: flex;
@@ -218,6 +202,8 @@ audio::-webkit-media-controls-toggle-closed-captions-button */
 
 .mute-button {
     /* padding-top: 5px; */
+    position: relative;
+    top: 4px;
     font-size: 15px;
 }
 
@@ -253,7 +239,7 @@ audio::-webkit-media-controls-toggle-closed-captions-button */
 .volume-bar {
     -webkit-appearance: none;
     appearance: none;
-    height: 2.5px; 
+    height: 1.5px; 
     outline: none;
     padding: 1px;
     margin: 1px;
