--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -51,6 +51,8 @@
 
 .create-pl-link {
     margin-top: 150px;
+    font-size: 15px;
+    letter-spacing: 1px;
 }
 
 .site-nav-link:hover {
@@ -61,6 +63,11 @@
 .site-nav-link:focus {
     border-left: 4px solid #f59b23;
     color: white;
+}
+
+
+.nav-sub-header:hover {
+    border-left: 4px solid rgb(18, 18, 18) !important;
 }
 
 .user-nav {
