--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -1,13 +1,11 @@
 .search-container {
     background: none;
     color: whitesmoke;
-    /* background-color: rgba(67, 67, 67, 0.365); */
     margin-left: 250px;
-    z-index: -1;
+    z-index: 5;
     height: auto;
     position: absolute;
     top: 0px;
-    /* left: 0;   */
     width: 100%;
     height: 100px;
 }
@@ -23,9 +21,6 @@
     border-radius: 25px !important;
     padding-left: 40px;
     font-size: 16px !important;
-    /* text-align: center; */
-    /* color: transparent !important;
-    text-shadow: 0 0 0 rgb(18, 18, 18) !important; */
     font-size: 18px;
 }
 
@@ -38,4 +33,8 @@
     outline: none !important;
     border: none !important;
     box-shadow: none !important;    
+}
+
+.search-index {
+    padding-top: 10% !important;
 }
