--- a/app/assets/stylesheets/audio_player.css
+++ b/app/assets/stylesheets/audio_player.css
@@ -98,6 +98,60 @@
     color: grey;
 }
 
+.shuffle-true {
+    font-size: 12px;
+    transform: scale(0.7);
+    position: absolute;
+    top: -39px;
+    left: 15%;
+    color: #f59b23;
+}
+
+.shuffle-false {
+    font-size: 12px;
+    transform: scale(0.7);
+    position: absolute;
+    top: -39px;
+    left: 15%;
+}
+
+.shuffle-true:hover {
+    transition: all 0.15s ease-in-out;
+    color: #f5b35c;
+}
+
+.repeat-false:hover {
+    transition: all 0.15s ease-in-out;
+    color: whitesmoke;
+}
+
+.repeat-true {
+    font-size: 12px;
+    transform: scale(0.7);
+    position: absolute;
+    top: -39px;
+    right: 15%;
+    color: #f59b23;
+}
+
+.repeat-false {
+    font-size: 12px;
+    transform: scale(0.7);
+    position: absolute;
+    top: -39px;
+    right: 15%;
+}
+
+.repeat-true:hover {
+    transition: all 0.15s ease-in-out;
+    color: #f5b35c;
+}
+
+.repeat-false:hover {
+    transition: all 0.15s ease-in-out;
+    color: whitesmoke;
+}
+
 .progress-bar {
     width: 100%;
     -webkit-appearance: none;
